# sparkstart

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKLOG.md  plan.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/plans/: 2026-02-21-rename-and-cleanup.md
projinit/: cli.py  core.py
scripts/: build_dist.py
sparkstart/: checks.py  cli.py  core.py  validation.py  wizard.py
sparkstart/scaffolders/: compose.py  devcontainer.py  direnv.py  guides.py  python.py  tools.py  tutorial.py
sparkstart/templates/: compose.py  cpp.py  devcontainer.py  direnv.py  guides.py  javascript.py  python.py  rust.py  tools.py
sparkstart/templates/tutorial/: __init__.py  cpp.py  javascript.py  python.py  rust.py
sparkstart/utils/: common.py  completion.py  github.py  help.py  output.py  progress.py  suggestions.py
tests/: conftest.py
tests/integration/: test_integration.py
